# UltraFrameAI

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTERNAL_REFINER_API.md  FFMPEG_DISTRIBUTION.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
UltraFrameAI/: AntiFlickerProcessor.cs  App.xaml  App.xaml.cs  AppThemeManager.cs  BackgroundColorDialog.xaml  BackgroundColorDialog.xaml.cs  BenchmarkChartsWindow.xaml  BenchmarkChartsWindow.xaml.cs  BenchmarkRunner.cs  BenchmarkWindow.xaml  BenchmarkWindow.xaml.cs  Commands.cs  CustomTargetValueDialog.xaml  CustomTargetValueDialog.xaml.cs  DonationDialog.xaml  DonationDialog.xaml.cs  DonationSupportInfo.cs  FfmpegApiFrameEncoderSession.cs  FfmpegApiRuntime.cs  FfmpegDownloadFailureDialog.xaml  FfmpegDownloadFailureDialog.xaml.cs  FfmpegInstallLocationDialog.xaml  FfmpegInstallLocationDialog.xaml.cs  FfmpegInstallProgressDialog.xaml  FfmpegInstallProgressDialog.xaml.cs  FfmpegLicensePolicy.cs  FfmpegSetupDialog.xaml  FfmpegSetupDialog.xaml.cs  FfmpegSharedLibraryLoader.cs  FfmpegSharedLibraryLocator.cs  FileToImageConverter.cs  FrameEncoderBridgeFactory.cs  FrameEncoderSessionConfig.cs  GlobalUsings.cs  GpuDeviceDetector.cs  HardwareAssessment.cs  HelpCenterDialog.xaml  HelpCenterDialog.xaml.cs  HelpCenterInfo.cs  IFrameEncoderBridge.cs  (+57 more)
UltraFrameAI.Native/: README.md
UltraFrameAI.Native/AntiFlicker/: CMakeLists.txt  build-native.ps1
UltraFrameAI.Native/AntiFlicker/src/: anti_flicker.cpp  anti_flicker.h  encoder_bridge.cpp  encoder_bridge.h  version.rc.in
UltraFrameAI.Native/Encoder/: CMakeLists.txt  build-native.ps1
UltraFrameAI.Native/Encoder/src/: encoder_bridge.cpp  encoder_bridge.h
UltraFrameAI.Tests/: AntiFlickerNativeTests.cs  BenchmarkRunnerTests.cs  CommandTests.cs  FfmpegSharedLibraryTests.cs  LocalizedStringsTests.cs  MainViewModelResumeTests.cs  MainViewModelThreadingTests.cs  PipelineIntegrationTests.cs  PipelineServiceTests.cs  ProcessRunnerTests.cs  QueueItemViewModelTests.cs  RecentFolderItemTests.cs  ResumeProgressTests.cs  TestSupport.cs  UltraFrameAI.Tests.csproj
UltraFrameAI/Resources/: Strings.Designer.cs  Strings.de.resx  Strings.ja.resx  Strings.keys.md  Strings.resx  Strings.ru.resx  Strings.zh-CN.resx
realesrgan-ncnn-vulkan-20220424/: VERSION.json
tools/: external-refiner-pass-through.ps1
